tests/invalid/Lifetime_Invalid_1.whiley
public export method test():
    &*:int ptr1 = this:new 42
